change server and fix

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,12 +1,12 @@
 .card-header {
-    background-color: #880a1f; /* Change to the desired background color */
+    background: linear-gradient(90deg, #800020 0%, #c00030 100%);
     color: white; /* Change to the desired text color */
   }
 
 .card-body {
-    color: #880a1f; /* Change to the desired color */
+    color: #800020; /* Change to the desired color */
   }
 
 .custom-color {
-    color: #880a1f; /* Change to the desired color */
+    color: #800020; /* Change to the desired color */
   }  
