--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,32 +1,32 @@
 <div class="text-center mb-4">
-    <img src="assets/images/eng-title-logo.png" width="80%" alt="Logo" class="img-fluid">
+  <img src="assets/images/eng-title-logo.png" width="80%" alt="Logo" class="img-fluid">
 </div>
 
-<h1 class="h4 font-weight-normal custom-color">วิสัยทัศน์</h1>
+<h1 class="h4 font-weight-normal custom-color">วิสัยทัศน์ (Vision)</h1>
 <hr/>
 <div class="mb-1">
   <p>
-    เป็นองค์กรที่โดดเด่นในการสร้างกำลังคนและความรู้ด้านวิศวกรรมศาสตร์ของประเทศ เป้าหมาย: เป็น 1 ใน 3 ของประเทศด้านวิศวกรรมศาสตร์ ภายในปี พ.ศ. 2568
+    เป็นองค์กรที่โดดเด่นในการสร้างกำลังคนและความรู้ด้านวิศวกรรมศาสตร์ของประเทศ
   </p>
 </div>
 
-
-<h1 class="h4 font-weight-normal custom-color">พันธกิจ</h1>
+<h1 class="h4 font-weight-normal custom-color">พันธกิจ (Mission)</h1>
 <hr/>
 <div class="mb-1">
   <ol>
-    <li>ผลิตและพัฒนากำลังคนทางด้านวิศวกรรมศาสตร์ที่มีความรู้และทักษะพร้อมในการทำงานภาคอุตสาหกรรม</li>
-    <li>วิจัยและพัฒนาทางด้านวิศวกรรมศาสตร์ที่ตอบสนองความต้องการของประเทศและภูมิภาค</li>
-    <li>บริการวิชาการ ปรับแปลง และถ่ายทอดเทคโนโลยี เพื่อส่งเสริมศักยภาพในการแข่งขันของภาคอุตสาหกรรมและบริการของประเทศและสร้างสรรค์คุณค่าแก่สังคม</li>
+      <li>ผลิตและพัฒนากำลังคนที่มีความรู้และทักษะด้านวิศวกรรมศาสตร์ที่พร้อมในการทำงานภาคอุตสาหกรรม</li>
+      <li>วิจัยเพื่อสร้างองค์ความรู้ เทคโนโลยีและนวัตกรรม ด้านวิศวกรรมศาสตร์ในการนำไปใช้ประโยชน์เพื่อพัฒนาประเทศ</li>
+      <li>บริการวิชาการ ปรับแปลง และถ่ายทอดเทคโนโลยีเพื่อส่งเสริมศักยภาพในการแข่งขันของภาคอุตสาหกรรมและพัฒนาชุมชน</li>
   </ol>
 </div>
 
-
-<h1 class="h4 font-weight-normal custom-color">ค่านิยม “WELL”</h1>
+<h1 class="h4 font-weight-normal custom-color">ค่านิยม “WELL” (Values)</h1>
 <hr/>
-<ol>
-  <li>การทำงานอย่างชาญฉลาดบนพื้นฐานของข้อมูลจริง (Work Smart Based on Fact)</li>
-  <li>การมุ่งเน้นผลลัพธ์ที่มีคุณค่าต่อผู้เรียน และลูกค้ากลุ่มอื่น (Excellence)</li>
-  <li>การเรียนรู้อย่างต่อเนื่องและทันต่อการเปลี่ยนแปลง (Learning and Agility)</li>
-  <li>การเป็นผู้นำนวัตกรรมเพื่อสังคม (Leading Innovation for Society)</li>
-</ol> 
+<div class="mb-1">
+  <ol>
+      <li>W: Work Smart Based on Facts (การทำงานอย่างชาญฉลาดบนพื้นฐานของข้อมูลจริง)</li>
+      <li>E: Embrace Excellence (การมุ่งเน้นผลลัพธ์ที่มีคุณค่าต่อผู้เรียน และลูกค้ากลุ่มอื่น)</li>
+      <li>L: Lifelong Learning and Agility (การเรียนรู้อย่างต่อเนื่องและทันต่อการเปลี่ยนแปลง)</li>
+      <li>L: Launching Innovation for Community Betterment (การนำนวัตกรรมไปใช้ให้เกิดประโยชน์ต่อสังคม)</li>
+  </ol>
+</div>
