--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -15,5 +15,5 @@
   }
 
   .custom-color {
-    color: #880a1f; /* Change to the desired color */
+    color: #800020; /* Change to the desired color */
   }
