--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -4,16 +4,16 @@
   }
   
   .nav-pills .nav-link.active {
-    color: #5a0c18;
+    color: #800020;
     background-color: #ffffff;
 }
 .dropdown-menu {
-  --bs-dropdown-link-active-bg: #880a1f;
+  --bs-dropdown-link-active-bg: #800020;
 }
 
 .dropdown-item.active{
   color: #ffffff;
-  background-color: #5a0c18;
+  background-color: #800020;
 }
   
   .sidebar-container {
