--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="loading" *ngIf="isLoading">
+<div class="loading" *ngIf="isLoading" style="font-family: Kanit-Light;">
   <div class="spinner"></div>
   กำลังโหลด...
 </div>
