--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,3 @@
-:host {
-  
-}
 
 .loading {
     display: flex;
@@ -12,7 +9,7 @@
   
   .spinner {
     border: 4px solid rgba(0, 0, 0, 0.1);
-    border-top: 4px solid  #880a1f;
+    border-top: 4px solid  #800020;
     border-radius: 50%;
     width: 50px;
     height: 50px;
