--- a/src/app/components/setting/setting.component.scss
+++ b/src/app/components/setting/setting.component.scss
@@ -1,4 +1,4 @@
 .card-header {
-    background-color: #880a1f; /* Change to the desired background color */
+    background: linear-gradient(90deg, #800020 0%, #c00030 100%);
     color: white; /* Change to the desired text color */
   }
